@@ -63,22 +63,22 @@ static char *xpm[] = {
 \"O c #DADAB6\",
 \"P c #6C91B6\",
 /* pixels */
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\",
-\"AAAAAAAAAAAAAAAA\"
+\"MMMMMMMMMMMMMMMM\",
+\"MMMMMMMMMMMMMMMM\",
+\"MMMMMMMMMMMMMMMM\",
+\"MMMMMMMMMMMMMMMM\",
+\"MMMMMMMMMMMMMMMM\",
+\"MMMMMMMMMMMMMMMM\",
+\"MMMMMMMMMMMMMMMM\",
+\"MMMMMMMJAJKKAMMM\",
+\"MMMMMJAAAKJJJAMM\",
+\"MMMMMAKJJAJJAAMM\",
+\"MMMKKAJJJAAAMMMM\",
+\"MMBJJAAAAAJJAMMM\",
+\"MMJBJAJAJAAMMMMM\",
+\"MMMMMAJAMJAMMMMM\",
+\"MMMMMMJAMJAMMMMM\",
+\"MMMMMMMMMMMMMMMM\"
 };" nil t)
 (create-image "/* XPM */
 static char *xpm[] = {
